# coursework4

./: README.md
circuit/: CMakeLists.txt
circuit/benchmarks/: S27.BEN  S526.BEN
circuit/command/: main.cpp  permissibleSet.cpp  speed.cpp
circuit/header/: AcceptableFooBuilder.h  BddExporter.h  Circuit.h  DnfExporter.h  Gate.h  Importer.h  PermissibleSetBuilder.h  TestabilityFooBuilder.h  Timer.h  bddExporter.h  circuit.h  dnfExporter.h  gate.h  timer.h
circuit/source/AcceptableFooBuilder/: builder.cpp
circuit/source/BddExporter/: fromInput.cpp  fromOutput.cpp
circuit/source/Circuit/: constructors.cpp  dnfExporter.cpp  exportBDD.cpp  print.cpp  utils.cpp
circuit/source/DnfExporter/: fromBDD.cpp  fromInput.cpp
circuit/source/Gate/: constructor.cpp  print.cpp  sortTopological.cpp  utils.cpp
circuit/source/Importer/: importer.cpp
circuit/source/PermissibleSetBuilder/: buildPermissibleSets.cpp  build_D1_D0.cpp  build_permissible_set.cpp  constructor.cpp  essentials.cpp  getM.cpp  getPermissibleSets.cpp  main.cpp  utils.cpp
circuit/source/TestabilityFooBuilder/: B.cpp  C.cpp  D.cpp  buildVertex.cpp  constructor.cpp  isolate.cpp
circuit/source/Timer/: timer.cpp
circuit/source/bddExporter/: fromInput.cpp  fromOutput.cpp
circuit/source/circuit/: bddExporter.cpp  constructors.cpp  dnfExporter.cpp  exportBDD.cpp  exportCircuit.cpp  exportDNF.cpp  importBenchmark.cpp  print.cpp  support.cpp
circuit/source/dnfExporter/: fromBDD.cpp  fromInput.cpp
circuit/source/gate/: print.cpp
circuit/source/timer/: timer.cpp
circuit/subprojects/bdd/: CMakeLists.txt  main.cpp
circuit/subprojects/bdd/header/: bdd.h
circuit/subprojects/bdd/source/: constructors.cpp  export_dnf.cpp  export_gv.cpp  print.cpp  support.cpp
circuit/subprojects/bdd/subprojects/bdd_manager/: CMakeLists.txt  main.cpp
circuit/subprojects/bdd/subprojects/bdd_manager/header/: bdd_manager.h  variable.h  vertex.h
circuit/subprojects/bdd/subprojects/bdd_manager/source/bdd_manager/: apply.cpp  apply_bin.cpp  constructors.cpp  create.cpp  exportPNG.cpp  negate.cpp  operators.cpp  print.cpp  reduce.cpp  support.cpp  traverse.cpp
circuit/subprojects/bdd/subprojects/bdd_manager/source/variable/: variable.cpp
circuit/subprojects/bdd/subprojects/bdd_manager/source/vertex/: nontermvertex.cpp  termvertex.cpp  vertex.cpp
circuit/subprojects/bdd/subprojects/dnf/: CMakeLists.txt  main.cpp
circuit/subprojects/bdd/subprojects/dnf/header/: conjunction.h  dnf.h  dnf_from_bdd.h
circuit/subprojects/bdd/subprojects/dnf/source/: addConjunction.cpp  constructors.cpp  importNames.cpp  print.cpp
circuit/subprojects/bdd/subprojects/dnf/source/conjunction/: conjunction.cpp  constructors.cpp  operators.cpp
circuit/subprojects/bdd/subprojects/dnf/source/dnf/: constructors.cpp  operations.cpp  operators.cpp  print.cpp  reduce.cpp
circuit/subprojects/dnf/: CMakeLists.txt
circuit/subprojects/dnf/header/: conj.h  dnf.h
circuit/subprojects/dnf/source/conj/: basics.cpp  constructors.cpp  operators.cpp  print.cpp
circuit/subprojects/dnf/source/dnf/: constructors.cpp  odnf_operators.cpp  operations.cpp  operators.cpp  print.cpp  reduce.cpp  reduce2.cpp  reduce3.cpp  shrink.cpp
circuit/test/: basic.cpp
