# cmake_minimum_required(VERSION 3.1)
# project(DNF)

# set(MAIN main.cpp)
# set(HEADER_DIR header)
# set(SOURCE_DIR source)

# aux_source_directory(${SOURCE_DIR}/dnf DNF_CXXS)
# aux_source_directory(${SOURCE_DIR}/conjunction DNF_CXXS)

# add_library(DNF_LIB STATIC ${DNF_CXXS})
# target_include_directories(DNF_LIB  PUBLIC ${HEADER_DIR})


# add_executable(MAIN_DNF ${MAIN})

# target_link_libraries(MAIN_DNF DNF_LIB)